--- a/Densenet.ipynb
+++ b/Densenet.ipynb
@@ -52,18 +52,10 @@
      "data": {
       "text/plain": [
        "[PosixPath('/home/ubuntu/data/sandwich/train-315'),\n",
-       " PosixPath('/home/ubuntu/data/sandwich/gw-train-315'),\n",
-       " PosixPath('/home/ubuntu/data/sandwich/gw-he-train-315'),\n",
        " PosixPath('/home/ubuntu/data/sandwich/.DS_Store'),\n",
        " PosixPath('/home/ubuntu/data/sandwich/test'),\n",
-       " PosixPath('/home/ubuntu/data/sandwich/gw-he-test-315'),\n",
-       " PosixPath('/home/ubuntu/data/sandwich/ce-test-315'),\n",
        " PosixPath('/home/ubuntu/data/sandwich/train'),\n",
-       " PosixPath('/home/ubuntu/data/sandwich/he-train-315'),\n",
-       " PosixPath('/home/ubuntu/data/sandwich/gw-test-315'),\n",
        " PosixPath('/home/ubuntu/data/sandwich/test-315'),\n",
-       " PosixPath('/home/ubuntu/data/sandwich/ce-train-315'),\n",
-       " PosixPath('/home/ubuntu/data/sandwich/he-test-315'),\n",
        " PosixPath('/home/ubuntu/data/sandwich/.ipynb_checkpoints')]"
       ]
      },
@@ -471,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,19 +556,7 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([0, 0, 0, 3, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 4, 0, 0, 0, 0, 3, 0, 0,\n",
-       "        0, 0, 0, 0, 3, 3, 0, 0, 3, 0, 0, 0], device='cuda:0')"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# pred"
    ]
@@ -587,19 +567,7 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([4, 5, 1, 0, 5, 5, 0, 5, 0, 1, 5, 0, 0, 1, 4, 1, 1, 3, 2, 2, 1, 1, 4, 1,\n",
-       "        3, 5, 0, 2, 3, 2, 1, 5, 2, 3, 4, 1], device='cuda:0')"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# y"
    ]
@@ -608,18 +576,7 @@
    "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(5, device='cuda:0')"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# pred.eq(y).sum()"
    ]
@@ -632,7 +589,7 @@
     {
      "data": {
       "text/plain": [
-       "1.9452317953109741"
+       "1.8174095153808594"
       ]
      },
      "execution_count": 46,
@@ -683,7 +640,7 @@
     {
      "data": {
       "text/plain": [
-       "(1.839641923904419, 0.1711111111111111)"
+       "(1.810122589270274, 0.21888888888888888)"
       ]
      },
      "execution_count": 48,
@@ -708,6 +665,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def save_model(m, p): torch.save(m.state_dict(), p)\n",
+    "    \n",
+    "def load_model(m, p): m.load_state_dict(torch.load(p))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_path = Path(\"/home/ubuntu/models/sandwich/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def get_optimizer(model, lr=0.01, wd=0.0):\n",
     "    parameters = filter(lambda p: p.requires_grad, model.parameters())\n",
     "    optim = torch.optim.Adam(parameters, lr=lr, weight_decay=wd)\n",
@@ -720,12 +697,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "def train(model, epochs=5, learning_rate=0.01):\n",
     "    optimzer = get_optimizer(model, lr=learning_rate, wd=0)\n",
+    "    prev_val_acc = 0.0\n",
     "    for i in range(epochs):\n",
     "        model.train()\n",
     "        total = 0\n",
@@ -744,12 +722,18 @@
     "            sum_loss += batch*(loss.item())\n",
     "        val_loss, val_acc = val_metrics(model, valid_dl)\n",
     "        if i % 2 == 0:\n",
-    "            print(\"train loss %.3f val loss %.3f val accuracy %.3f\" % (sum_loss/total, val_loss, val_acc))"
+    "            print(\"train loss %.3f val loss %.3f val accuracy %.3f\" % (sum_loss/total, val_loss, val_acc))\n",
+    "        if val_acc > prev_val_acc: \n",
+    "            prev_val_acc = val_acc\n",
+    "            if val_acc > 0.7:\n",
+    "                path = \"{0}/ft_densenet_loss_{1:.0f}.pth\".format(model_path, 100*val_acc)\n",
+    "                save_model(model, path)\n",
+    "                print(path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -758,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 54,
    "metadata": {
     "scrolled": true
    },
@@ -767,11 +751,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train loss 1.412 val loss 0.740 val accuracy 0.723\n",
-      "train loss 0.758 val loss 0.824 val accuracy 0.719\n",
-      "train loss 0.676 val loss 0.982 val accuracy 0.702\n",
-      "train loss 0.681 val loss 1.068 val accuracy 0.664\n",
-      "train loss 0.655 val loss 1.039 val accuracy 0.693\n"
+      "train loss 1.410 val loss 0.845 val accuracy 0.691\n",
+      "/home/ubuntu/models/sandwich/ft_densenet_loss_76.pth\n",
+      "train loss 0.705 val loss 0.910 val accuracy 0.693\n",
+      "train loss 0.650 val loss 0.784 val accuracy 0.733\n",
+      "/home/ubuntu/models/sandwich/ft_densenet_loss_77.pth\n",
+      "train loss 0.645 val loss 0.981 val accuracy 0.700\n",
+      "train loss 0.594 val loss 0.962 val accuracy 0.724\n"
      ]
     }
    ],
@@ -781,31 +767,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def save_model(m, p): torch.save(m.state_dict(), p)\n",
-    "    \n",
-    "def load_model(m, p): m.load_state_dict(torch.load(p))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_path = Path(\"/home/ubuntu/models/sandwich/initial_densenet.pth\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_model(model, model_path)"
+    "save_model(model, model_path/\"initial_densennet.pth\")"
    ]
   },
   {
@@ -823,7 +789,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_model(model, model_path)"
+    "load_model(model, model_path/\"initial_densennet.pth\")"
    ]
   },
   {
@@ -834,7 +800,7 @@
     {
      "data": {
       "text/plain": [
-       "(1.012032322883606, 0.7088888888888889)"
+       "(0.7783847964472241, 0.7366666666666667)"
       ]
      },
      "execution_count": 58,
