--- a/Inception.ipynb
+++ b/Inception.ipynb
@@ -52,18 +52,10 @@
      "data": {
       "text/plain": [
        "[PosixPath('/home/ubuntu/data/sandwich/train-315'),\n",
-       " PosixPath('/home/ubuntu/data/sandwich/gw-train-315'),\n",
-       " PosixPath('/home/ubuntu/data/sandwich/gw-he-train-315'),\n",
        " PosixPath('/home/ubuntu/data/sandwich/.DS_Store'),\n",
        " PosixPath('/home/ubuntu/data/sandwich/test'),\n",
-       " PosixPath('/home/ubuntu/data/sandwich/gw-he-test-315'),\n",
-       " PosixPath('/home/ubuntu/data/sandwich/ce-test-315'),\n",
        " PosixPath('/home/ubuntu/data/sandwich/train'),\n",
-       " PosixPath('/home/ubuntu/data/sandwich/he-train-315'),\n",
-       " PosixPath('/home/ubuntu/data/sandwich/gw-test-315'),\n",
        " PosixPath('/home/ubuntu/data/sandwich/test-315'),\n",
-       " PosixPath('/home/ubuntu/data/sandwich/ce-train-315'),\n",
-       " PosixPath('/home/ubuntu/data/sandwich/he-test-315'),\n",
        " PosixPath('/home/ubuntu/data/sandwich/.ipynb_checkpoints')]"
       ]
      },
@@ -613,7 +605,7 @@
     {
      "data": {
       "text/plain": [
-       "1.8733607530593872"
+       "1.8819752931594849"
       ]
      },
      "execution_count": 47,
@@ -666,7 +658,7 @@
     {
      "data": {
       "text/plain": [
-       "(1.828691992494795, 0.1388888888888889)"
+       "(1.7783251139852736, 0.19)"
       ]
      },
      "execution_count": 49,
@@ -751,7 +743,7 @@
     "            print(\"train loss %.3f val loss %.3f val accuracy %.3f\" % (sum_loss/total, val_loss, val_acc))\n",
     "        if val_acc > prev_val_acc: \n",
     "            prev_val_acc = val_acc\n",
-    "            if val_acc > 0.68:\n",
+    "            if val_acc > 0.6:\n",
     "                path = \"{0}/ft_inception_loss_{1:.0f}.pth\".format(model_path, 100*val_acc)\n",
     "                save_model(model, path)\n",
     "                print(path)"
@@ -759,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -768,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 55,
    "metadata": {
     "scrolled": true
    },
@@ -777,11 +769,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train loss 1.881 val loss 1.154 val accuracy 0.571\n",
-      "train loss 1.294 val loss 1.048 val accuracy 0.636\n",
-      "train loss 1.468 val loss 1.334 val accuracy 0.581\n",
-      "train loss 1.395 val loss 1.047 val accuracy 0.648\n",
-      "train loss 1.584 val loss 1.290 val accuracy 0.588\n"
+      "train loss 1.640 val loss 1.150 val accuracy 0.592\n",
+      "/home/ubuntu/models/sandwich/ft_inception_loss_62.pth\n",
+      "train loss 1.345 val loss 1.088 val accuracy 0.610\n",
+      "train loss 1.472 val loss 1.660 val accuracy 0.531\n",
+      "/home/ubuntu/models/sandwich/ft_inception_loss_63.pth\n",
+      "train loss 1.377 val loss 1.326 val accuracy 0.583\n",
+      "/home/ubuntu/models/sandwich/ft_inception_loss_67.pth\n",
+      "train loss 1.660 val loss 1.175 val accuracy 0.623\n"
      ]
     }
    ],
@@ -791,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -816,25 +811,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_model(model, model_path/\"initial_inception.pth\")"
+    "load_model(model, model_path/\"ft_inception_loss_67.pth\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1.1315439840157826, 0.6322222222222222)"
+       "(0.9731851915518442, 0.6722222222222223)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -845,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -855,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -869,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -879,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 63,
    "metadata": {
     "scrolled": true
    },
@@ -888,21 +883,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train loss 1.303 val loss 0.993 val accuracy 0.666\n",
-      "train loss 1.220 val loss 0.962 val accuracy 0.682\n",
+      "train loss 1.275 val loss 0.962 val accuracy 0.668\n",
+      "/home/ubuntu/models/sandwich/ft_inception_loss_67.pth\n",
+      "/home/ubuntu/models/sandwich/ft_inception_loss_67.pth\n",
+      "train loss 1.155 val loss 0.966 val accuracy 0.678\n",
       "/home/ubuntu/models/sandwich/ft_inception_loss_68.pth\n",
-      "train loss 1.173 val loss 0.937 val accuracy 0.677\n",
-      "train loss 1.163 val loss 0.909 val accuracy 0.686\n",
+      "train loss 1.179 val loss 0.923 val accuracy 0.673\n",
+      "train loss 1.185 val loss 0.930 val accuracy 0.674\n",
       "/home/ubuntu/models/sandwich/ft_inception_loss_69.pth\n",
-      "train loss 1.157 val loss 0.910 val accuracy 0.676\n",
-      "train loss 1.150 val loss 0.904 val accuracy 0.676\n",
-      "/home/ubuntu/models/sandwich/ft_inception_loss_69.pth\n",
-      "train loss 1.132 val loss 0.892 val accuracy 0.689\n",
-      "/home/ubuntu/models/sandwich/ft_inception_loss_69.pth\n",
-      "train loss 1.077 val loss 0.899 val accuracy 0.663\n",
-      "/home/ubuntu/models/sandwich/ft_inception_loss_69.pth\n",
-      "train loss 1.062 val loss 0.871 val accuracy 0.687\n",
-      "train loss 1.094 val loss 0.894 val accuracy 0.673\n"
+      "train loss 1.127 val loss 0.926 val accuracy 0.670\n",
+      "train loss 1.126 val loss 0.927 val accuracy 0.671\n",
+      "train loss 1.072 val loss 0.891 val accuracy 0.682\n",
+      "train loss 1.099 val loss 0.882 val accuracy 0.686\n",
+      "train loss 1.076 val loss 0.871 val accuracy 0.686\n",
+      "/home/ubuntu/models/sandwich/ft_inception_loss_70.pth\n",
+      "train loss 1.028 val loss 0.886 val accuracy 0.700\n",
+      "/home/ubuntu/models/sandwich/ft_inception_loss_70.pth\n"
      ]
     }
    ],
@@ -912,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -928,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -937,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -946,16 +942,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1.1315439840157826, 0.6322222222222222)"
+       "(1.148863630162345, 0.6288888888888889)"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -966,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -978,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 69,
    "metadata": {
     "scrolled": true
    },
@@ -987,25 +983,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train loss 1.316 val loss 1.000 val accuracy 0.673\n",
-      "train loss 1.277 val loss 0.954 val accuracy 0.667\n",
-      "train loss 1.205 val loss 0.929 val accuracy 0.672\n",
-      "train loss 1.190 val loss 0.925 val accuracy 0.676\n",
-      "train loss 1.146 val loss 0.918 val accuracy 0.682\n",
+      "train loss 1.273 val loss 0.994 val accuracy 0.663\n",
+      "/home/ubuntu/models/sandwich/ft_inception_loss_66.pth\n",
+      "/home/ubuntu/models/sandwich/ft_inception_loss_67.pth\n",
+      "train loss 1.256 val loss 0.972 val accuracy 0.669\n",
       "/home/ubuntu/models/sandwich/ft_inception_loss_68.pth\n",
+      "train loss 1.191 val loss 0.976 val accuracy 0.679\n",
+      "/home/ubuntu/models/sandwich/ft_inception_loss_68.pth\n",
+      "/home/ubuntu/models/sandwich/ft_inception_loss_68.pth\n",
+      "train loss 1.183 val loss 0.995 val accuracy 0.669\n",
+      "train loss 1.191 val loss 0.935 val accuracy 0.683\n",
+      "/home/ubuntu/models/sandwich/ft_inception_loss_68.pth\n",
+      "train loss 1.142 val loss 0.920 val accuracy 0.689\n",
       "/home/ubuntu/models/sandwich/ft_inception_loss_69.pth\n",
-      "train loss 1.139 val loss 0.904 val accuracy 0.682\n",
-      "/home/ubuntu/models/sandwich/ft_inception_loss_69.pth\n",
-      "train loss 1.101 val loss 0.919 val accuracy 0.680\n",
-      "train loss 1.074 val loss 0.893 val accuracy 0.684\n",
-      "train loss 1.066 val loss 0.893 val accuracy 0.671\n",
-      "train loss 1.015 val loss 0.886 val accuracy 0.678\n"
+      "train loss 1.136 val loss 0.920 val accuracy 0.671\n",
+      "train loss 1.118 val loss 0.915 val accuracy 0.672\n",
+      "train loss 1.047 val loss 0.919 val accuracy 0.662\n",
+      "train loss 1.084 val loss 0.914 val accuracy 0.676\n"
      ]
     }
    ],
    "source": [
     "train(model, epochs=20, learning_rate=0.001)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_model(model, model_path/\"initial_unfreeze4_inception.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
