Try to tune Densenet

--- a/Densenet.ipynb
+++ b/Densenet.ipynb
@@ -589,7 +589,7 @@
     {
      "data": {
       "text/plain": [
-       "1.8174095153808594"
+       "1.816178321838379"
       ]
      },
      "execution_count": 46,
@@ -640,7 +640,7 @@
     {
      "data": {
       "text/plain": [
-       "(1.810122589270274, 0.21888888888888888)"
+       "(1.8498322235213385, 0.16666666666666666)"
       ]
      },
      "execution_count": 48,
@@ -775,8 +775,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Unfreeze hidden layer, train with lower learning rate"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -785,31 +792,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_model(model, model_path/\"initial_densennet.pth\")"
+    "load_model(model, model_path/\"ft_densenet_loss_77.pth\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.7783847964472241, 0.7366666666666667)"
+       "(0.736206473575698, 0.7677777777777778)"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "val_metrics(model, valid_dl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def set_trainable_attr(m, b=True):\n",
+    "    for p in m.parameters(): p.requires_grad = b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def unfreeze(model, layer_num):\n",
+    "    ct = 0\n",
+    "    for child in model.children():\n",
+    "        if ct == layer_num:\n",
+    "            set_trainable_attr(child)\n",
+    "    ct += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unfreeze(model, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# train(model, epochs=20, learning_rate=0.001)"
    ]
   },
   {
