Rerun on bigger EC2 instance

--- a/image_preprocess.ipynb
+++ b/image_preprocess.ipynb
@@ -6,6 +6,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ! pip install colorcorrect"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%reload_ext autoreload\n",
     "%autoreload 2\n",
     "%matplotlib inline\n",
