--- a/resize_images.ipynb
+++ b/resize_images.ipynb
@@ -6,6 +6,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ! pip install opencv-python"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import os\n",
     "from pathlib import Path\n",
     "import cv2"
@@ -166,20 +175,9 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "PosixPath('/home/ubuntu/data/sandwich/train')"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "train_path"
+    "new_train_path = Path(\"/home/ubuntu/data/sandwich/\")/\"train-315\""
    ]
   },
   {
@@ -188,7 +186,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_train_path = Path(\"/home/ubuntu/data/sandwich/\")/\"train-315\""
+    "new_train_path.mkdir(exist_ok=True)"
    ]
   },
   {
@@ -197,7 +195,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_train_path.mkdir(exist_ok=True)"
+    "new_test_path = Path(\"/home/ubuntu/data/sandwich/\")/\"test-315\""
    ]
   },
   {
@@ -206,21 +204,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_test_path = Path(\"/home/ubuntu/data/sandwich/\")/\"test-315\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "new_test_path.mkdir(exist_ok=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,59 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# resize_all_images(new_train_path, train_path, sz=315)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# resize_all_images(new_test_path, test_path, sz=315)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Resize images to 315"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_path = Path(\"/home/ubuntu/data/sandwich/\")/\"train\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_train_path = Path(\"/home/ubuntu/data/sandwich/\")/\"train-315\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_train_path.mkdir(exist_ok=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,34 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_path = Path(\"/home/ubuntu/data/sandwich/\")/\"test\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_test_path = Path(\"/home/ubuntu/data/sandwich/\")/\"test-315\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_test_path.mkdir(exist_ok=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
