--- a/Densenet.ipynb
+++ b/Densenet.ipynb
@@ -55,8 +55,7 @@
        " PosixPath('/home/ubuntu/data/sandwich/.DS_Store'),\n",
        " PosixPath('/home/ubuntu/data/sandwich/test'),\n",
        " PosixPath('/home/ubuntu/data/sandwich/train'),\n",
-       " PosixPath('/home/ubuntu/data/sandwich/test-315'),\n",
-       " PosixPath('/home/ubuntu/data/sandwich/.ipynb_checkpoints')]"
+       " PosixPath('/home/ubuntu/data/sandwich/test-315')]"
       ]
      },
      "execution_count": 4,
@@ -589,7 +588,7 @@
     {
      "data": {
       "text/plain": [
-       "1.816178321838379"
+       "1.7807430028915405"
       ]
      },
      "execution_count": 46,
@@ -636,20 +635,9 @@
    "cell_type": "code",
    "execution_count": 48,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1.8498322235213385, 0.16666666666666666)"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "val_metrics(model, valid_dl)"
+    "# val_metrics(model, valid_dl)"
    ]
   },
   {
@@ -723,10 +711,10 @@
     "        val_loss, val_acc = val_metrics(model, valid_dl)\n",
     "        if i % 2 == 0:\n",
     "            print(\"train loss %.3f val loss %.3f val accuracy %.3f\" % (sum_loss/total, val_loss, val_acc))\n",
-    "        if val_acc > prev_val_acc: \n",
+    "        if val_acc > prev_val_acc:\n",
     "            prev_val_acc = val_acc\n",
-    "            if val_acc > 0.7:\n",
-    "                path = \"{0}/ft_densenet_loss_{1:.0f}.pth\".format(model_path, 100*val_acc)\n",
+    "            if val_acc > 0.6:\n",
+    "                path = \"{0}/initial_densenet_{1:.0f}.pth\".format(model_path, 100*val_acc)\n",
     "                save_model(model, path)\n",
     "                print(path)"
    ]
@@ -751,13 +739,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train loss 1.410 val loss 0.845 val accuracy 0.691\n",
-      "/home/ubuntu/models/sandwich/ft_densenet_loss_76.pth\n",
-      "train loss 0.705 val loss 0.910 val accuracy 0.693\n",
-      "train loss 0.650 val loss 0.784 val accuracy 0.733\n",
-      "/home/ubuntu/models/sandwich/ft_densenet_loss_77.pth\n",
-      "train loss 0.645 val loss 0.981 val accuracy 0.700\n",
-      "train loss 0.594 val loss 0.962 val accuracy 0.724\n"
+      "train loss 1.599 val loss 0.771 val accuracy 0.718\n",
+      "/home/ubuntu/models/sandwich/initial_densenet_72.pth\n",
+      "/home/ubuntu/models/sandwich/initial_densenet_74.pth\n",
+      "train loss 0.732 val loss 0.751 val accuracy 0.731\n",
+      "/home/ubuntu/models/sandwich/initial_densenet_75.pth\n",
+      "train loss 0.680 val loss 0.752 val accuracy 0.741\n",
+      "train loss 0.677 val loss 0.816 val accuracy 0.719\n",
+      "train loss 0.644 val loss 0.774 val accuracy 0.749\n",
+      "/home/ubuntu/models/sandwich/initial_densenet_76.pth\n"
      ]
     }
    ],
@@ -771,7 +761,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_model(model, model_path/\"initial_densennet.pth\")"
+    "# save_model(model, model_path/\"initial_densennet.pth\")"
    ]
   },
   {
@@ -783,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -792,25 +782,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_model(model, model_path/\"ft_densenet_loss_77.pth\")"
+    "load_model(model, model_path/\"initial_densenet_76.pth\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.736206473575698, 0.7677777777777778)"
+       "(0.7173503852552838, 0.7644444444444445)"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -831,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -845,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -854,11 +844,47 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train2(model, epochs=5, learning_rate=0.01):\n",
+    "    optimzer = get_optimizer(model, lr=learning_rate, wd=0)\n",
+    "    prev_val_acc = 0.0\n",
+    "    for i in range(epochs):\n",
+    "        model.train()\n",
+    "        total = 0\n",
+    "        sum_loss = 0\n",
+    "        for x, y in train_dl:\n",
+    "            batch = y.shape[0]\n",
+    "            x = x.cuda().float()\n",
+    "            y = y.cuda()\n",
+    "            out = model(x)\n",
+    "            _, pred = torch.max(out, 1)\n",
+    "            loss = F.cross_entropy(out, y)\n",
+    "            optimzer.zero_grad()\n",
+    "            loss.backward()\n",
+    "            optimzer.step()\n",
+    "            total += batch\n",
+    "            sum_loss += batch*(loss.item())\n",
+    "        val_loss, val_acc = val_metrics(model, valid_dl)\n",
+    "        if i % 2 == 0:\n",
+    "            print(\"train loss %.3f val loss %.3f val accuracy %.3f\" % (sum_loss/total, val_loss, val_acc))\n",
+    "        if val_acc > prev_val_acc:\n",
+    "            prev_val_acc = val_acc\n",
+    "            if val_acc > 0.76:\n",
+    "                path = \"{0}/initial_densenet_{1:.0f}.pth\".format(model_path, 100*val_acc)\n",
+    "                save_model(model, path)\n",
+    "                print(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# train(model, epochs=20, learning_rate=0.001)"
+    "train2(model, epochs=20, learning_rate=0.001)"
    ]
   },
   {
