--- a/Inception.ipynb
+++ b/Inception.ipynb
@@ -55,8 +55,7 @@
        " PosixPath('/home/ubuntu/data/sandwich/.DS_Store'),\n",
        " PosixPath('/home/ubuntu/data/sandwich/test'),\n",
        " PosixPath('/home/ubuntu/data/sandwich/train'),\n",
-       " PosixPath('/home/ubuntu/data/sandwich/test-315'),\n",
-       " PosixPath('/home/ubuntu/data/sandwich/.ipynb_checkpoints')]"
+       " PosixPath('/home/ubuntu/data/sandwich/test-315')]"
       ]
      },
      "execution_count": 4,
@@ -605,7 +604,7 @@
     {
      "data": {
       "text/plain": [
-       "1.8819752931594849"
+       "1.801936149597168"
       ]
      },
      "execution_count": 47,
@@ -654,20 +653,9 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1.7783251139852736, 0.19)"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "val_metrics(model, valid_dl)"
+    "# val_metrics(model, valid_dl)"
    ]
   },
   {
@@ -741,10 +729,10 @@
     "        val_loss, val_acc = val_metrics(model, valid_dl)\n",
     "        if i % 2 == 0:\n",
     "            print(\"train loss %.3f val loss %.3f val accuracy %.3f\" % (sum_loss/total, val_loss, val_acc))\n",
-    "        if val_acc > prev_val_acc: \n",
+    "        if val_acc > prev_val_acc:\n",
     "            prev_val_acc = val_acc\n",
     "            if val_acc > 0.6:\n",
-    "                path = \"{0}/ft_inception_loss_{1:.0f}.pth\".format(model_path, 100*val_acc)\n",
+    "                path = \"{0}/initial_inception_{1:.0f}.pth\".format(model_path, 100*val_acc)\n",
     "                save_model(model, path)\n",
     "                print(path)"
    ]
@@ -769,14 +757,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train loss 1.640 val loss 1.150 val accuracy 0.592\n",
-      "/home/ubuntu/models/sandwich/ft_inception_loss_62.pth\n",
-      "train loss 1.345 val loss 1.088 val accuracy 0.610\n",
-      "train loss 1.472 val loss 1.660 val accuracy 0.531\n",
-      "/home/ubuntu/models/sandwich/ft_inception_loss_63.pth\n",
-      "train loss 1.377 val loss 1.326 val accuracy 0.583\n",
-      "/home/ubuntu/models/sandwich/ft_inception_loss_67.pth\n",
-      "train loss 1.660 val loss 1.175 val accuracy 0.623\n"
+      "train loss 1.607 val loss 1.091 val accuracy 0.586\n",
+      "train loss 1.286 val loss 1.040 val accuracy 0.637\n",
+      "/home/ubuntu/models/sandwich/initial_inception_64.pth\n",
+      "/home/ubuntu/models/sandwich/initial_inception_66.pth\n",
+      "train loss 1.423 val loss 1.387 val accuracy 0.574\n",
+      "train loss 1.612 val loss 1.026 val accuracy 0.666\n",
+      "/home/ubuntu/models/sandwich/initial_inception_67.pth\n",
+      "/home/ubuntu/models/sandwich/initial_inception_67.pth\n",
+      "train loss 1.584 val loss 1.017 val accuracy 0.666\n"
      ]
     }
    ],
@@ -790,7 +779,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_model(model, model_path/\"initial_inception.pth\")"
+    "# save_model(model, model_path/\"initial_inception.pth\")"
    ]
   },
   {
@@ -798,128 +787,6 @@
    "metadata": {},
    "source": [
     "# Unfreeze top 2 hidden layers, train with lower learning rate"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = Inception().cuda()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "load_model(model, model_path/\"ft_inception_loss_67.pth\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.9731851915518442, 0.6722222222222223)"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "val_metrics(model, valid_dl)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def set_trainable_attr(m, b=True):\n",
-    "    for p in m.parameters(): p.requires_grad = b"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def unfreeze(model, layer_num):\n",
-    "    ct = 0\n",
-    "    for child in model.children():\n",
-    "        if ct == layer_num:\n",
-    "            set_trainable_attr(child)\n",
-    "    ct += 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "unfreeze(model, 16)\n",
-    "unfreeze(model, 15)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "train loss 1.275 val loss 0.962 val accuracy 0.668\n",
-      "/home/ubuntu/models/sandwich/ft_inception_loss_67.pth\n",
-      "/home/ubuntu/models/sandwich/ft_inception_loss_67.pth\n",
-      "train loss 1.155 val loss 0.966 val accuracy 0.678\n",
-      "/home/ubuntu/models/sandwich/ft_inception_loss_68.pth\n",
-      "train loss 1.179 val loss 0.923 val accuracy 0.673\n",
-      "train loss 1.185 val loss 0.930 val accuracy 0.674\n",
-      "/home/ubuntu/models/sandwich/ft_inception_loss_69.pth\n",
-      "train loss 1.127 val loss 0.926 val accuracy 0.670\n",
-      "train loss 1.126 val loss 0.927 val accuracy 0.671\n",
-      "train loss 1.072 val loss 0.891 val accuracy 0.682\n",
-      "train loss 1.099 val loss 0.882 val accuracy 0.686\n",
-      "train loss 1.076 val loss 0.871 val accuracy 0.686\n",
-      "/home/ubuntu/models/sandwich/ft_inception_loss_70.pth\n",
-      "train loss 1.028 val loss 0.886 val accuracy 0.700\n",
-      "/home/ubuntu/models/sandwich/ft_inception_loss_70.pth\n"
-     ]
-    }
-   ],
-   "source": [
-    "train(model, epochs=20, learning_rate=0.001)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "save_model(model, model_path/\"initial_unfreeze2_inception.pth\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Unfreeze top 4 hidden layers, train with lower learning rate"
    ]
   },
   {
@@ -937,7 +804,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_model(model, model_path/\"initial_inception.pth\")"
+    "load_model(model, model_path/\"initial_inception_67.pth\")"
    ]
   },
   {
@@ -948,7 +815,7 @@
     {
      "data": {
       "text/plain": [
-       "(1.148863630162345, 0.6288888888888889)"
+       "(0.9636889166302152, 0.6722222222222223)"
       ]
      },
      "execution_count": 67,
@@ -966,45 +833,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unfreeze(model, 16)\n",
-    "unfreeze(model, 15)\n",
-    "unfreeze(model, 14)\n",
-    "unfreeze(model, 13)"
+    "def set_trainable_attr(m, b=True):\n",
+    "    for p in m.parameters(): p.requires_grad = b"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 69,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "train loss 1.273 val loss 0.994 val accuracy 0.663\n",
-      "/home/ubuntu/models/sandwich/ft_inception_loss_66.pth\n",
-      "/home/ubuntu/models/sandwich/ft_inception_loss_67.pth\n",
-      "train loss 1.256 val loss 0.972 val accuracy 0.669\n",
-      "/home/ubuntu/models/sandwich/ft_inception_loss_68.pth\n",
-      "train loss 1.191 val loss 0.976 val accuracy 0.679\n",
-      "/home/ubuntu/models/sandwich/ft_inception_loss_68.pth\n",
-      "/home/ubuntu/models/sandwich/ft_inception_loss_68.pth\n",
-      "train loss 1.183 val loss 0.995 val accuracy 0.669\n",
-      "train loss 1.191 val loss 0.935 val accuracy 0.683\n",
-      "/home/ubuntu/models/sandwich/ft_inception_loss_68.pth\n",
-      "train loss 1.142 val loss 0.920 val accuracy 0.689\n",
-      "/home/ubuntu/models/sandwich/ft_inception_loss_69.pth\n",
-      "train loss 1.136 val loss 0.920 val accuracy 0.671\n",
-      "train loss 1.118 val loss 0.915 val accuracy 0.672\n",
-      "train loss 1.047 val loss 0.919 val accuracy 0.662\n",
-      "train loss 1.084 val loss 0.914 val accuracy 0.676\n"
-     ]
-    }
-   ],
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "train(model, epochs=20, learning_rate=0.001)"
+    "def unfreeze(model, layer_num):\n",
+    "    ct = 0\n",
+    "    for child in model.children():\n",
+    "        if ct == layer_num:\n",
+    "            set_trainable_attr(child)\n",
+    "    ct += 1"
    ]
   },
   {
@@ -1013,7 +857,241 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_model(model, model_path/\"initial_unfreeze4_inception.pth\")"
+    "unfreeze(model, 16)\n",
+    "unfreeze(model, 15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train2(model, epochs=5, learning_rate=0.01):\n",
+    "    optimzer = get_optimizer(model, lr=learning_rate, wd=0)\n",
+    "    prev_val_acc = 0.0\n",
+    "    for i in range(epochs):\n",
+    "        model.train()\n",
+    "        total = 0\n",
+    "        sum_loss = 0\n",
+    "        for x, y in train_dl:\n",
+    "            batch = y.shape[0]\n",
+    "            x = x.cuda().float()\n",
+    "            y = y.cuda()\n",
+    "            out, aux = model(x)\n",
+    "            _, pred = torch.max(out, 1)\n",
+    "            loss = F.cross_entropy(out, y)\n",
+    "            optimzer.zero_grad()\n",
+    "            loss.backward()\n",
+    "            optimzer.step()\n",
+    "            total += batch\n",
+    "            sum_loss += batch*(loss.item())\n",
+    "        val_loss, val_acc = val_metrics(model, valid_dl)\n",
+    "        if i % 2 == 0:\n",
+    "            print(\"train loss %.3f val loss %.3f val accuracy %.3f\" % (sum_loss/total, val_loss, val_acc))\n",
+    "        if val_acc > prev_val_acc:\n",
+    "            prev_val_acc = val_acc\n",
+    "            if val_acc > 0.67:\n",
+    "                path = \"{0}/unfreeze_inception_{1:.0f}.pth\".format(model_path, 100*val_acc)\n",
+    "                save_model(model, path)\n",
+    "                print(path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train loss 1.292 val loss 0.984 val accuracy 0.660\n",
+      "/home/ubuntu/models/sandwich/unfreeze_inception_67.pth\n",
+      "train loss 1.184 val loss 0.948 val accuracy 0.678\n",
+      "/home/ubuntu/models/sandwich/unfreeze_inception_68.pth\n",
+      "/home/ubuntu/models/sandwich/unfreeze_inception_68.pth\n",
+      "train loss 1.185 val loss 0.925 val accuracy 0.678\n",
+      "train loss 1.165 val loss 0.943 val accuracy 0.668\n",
+      "train loss 1.154 val loss 0.900 val accuracy 0.672\n",
+      "train loss 1.056 val loss 0.907 val accuracy 0.686\n",
+      "/home/ubuntu/models/sandwich/unfreeze_inception_69.pth\n",
+      "/home/ubuntu/models/sandwich/unfreeze_inception_69.pth\n",
+      "train loss 1.095 val loss 0.887 val accuracy 0.680\n",
+      "train loss 1.065 val loss 0.907 val accuracy 0.686\n",
+      "train loss 1.060 val loss 0.879 val accuracy 0.693\n",
+      "train loss 1.009 val loss 0.878 val accuracy 0.684\n"
+     ]
+    }
+   ],
+   "source": [
+    "train2(model, epochs=20, learning_rate=0.001)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = Inception().cuda()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load_model(model, model_path/\"unfreeze_inception_69.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.89482172495789, 0.6922222222222222)"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val_metrics(model, valid_dl)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Unfreeze top 4 hidden layers, train with lower learning rate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = Inception().cuda()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load_model(model, model_path/\"initial_inception_67.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.9636889166302152, 0.6722222222222223)"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val_metrics(model, valid_dl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unfreeze(model, 16)\n",
+    "unfreeze(model, 15)\n",
+    "unfreeze(model, 14)\n",
+    "unfreeze(model, 13)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train loss 1.263 val loss 0.964 val accuracy 0.679\n",
+      "/home/ubuntu/models/sandwich/unfreeze_inception_68.pth\n",
+      "train loss 1.234 val loss 0.943 val accuracy 0.674\n",
+      "train loss 1.184 val loss 0.934 val accuracy 0.677\n",
+      "/home/ubuntu/models/sandwich/unfreeze_inception_69.pth\n",
+      "train loss 1.160 val loss 0.915 val accuracy 0.679\n",
+      "train loss 1.115 val loss 0.895 val accuracy 0.680\n",
+      "train loss 1.100 val loss 0.915 val accuracy 0.680\n",
+      "train loss 1.118 val loss 0.901 val accuracy 0.687\n",
+      "train loss 1.076 val loss 0.884 val accuracy 0.684\n",
+      "/home/ubuntu/models/sandwich/unfreeze_inception_69.pth\n",
+      "train loss 1.014 val loss 0.889 val accuracy 0.684\n",
+      "train loss 1.071 val loss 0.898 val accuracy 0.668\n"
+     ]
+    }
+   ],
+   "source": [
+    "train2(model, epochs=20, learning_rate=0.001)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = Inception().cuda()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load_model(model, model_path/\"unfreeze_inception_69.pth\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.89482172495789, 0.6922222222222222)"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val_metrics(model, valid_dl)"
    ]
   },
   {
